# search-engine

./: .gitignore  CMakeLists.txt  README.md
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h  exceptions.h
json/: config.json  requests.json
res/: file1.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndexTest.cpp  SearchServerTest.cpp
